[gd_scene load_steps=6 format=3 uid="uid://dqi58dec8pur0"]

[ext_resource type="Script" path="res://assets/scripts/hubentrancew.gd" id="1_7uxax"]
[ext_resource type="Texture2D" uid="uid://b6biumd1fbs8m" path="res://assets/images/door.png" id="2_snm5u"]
[ext_resource type="AudioStream" uid="uid://ckfbfds4myr02" path="res://assets/sounds/sfx/sfx_dor.wav" id="3_hmoeu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qcwlr"]
size = Vector2(96, 96)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uwfa6"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_hmoeu")
stream_0/weight = 1.0

[node name="hubentrance" type="Node2D"]
z_index = -3
script = ExtResource("1_7uxax")

[node name="Door" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(0, -45)
texture = ExtResource("2_snm5u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_qcwlr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_uwfa6")
volume_db = -5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
